@@ -982,6 +982,10 @@ EXTRA_DIST = \
 	profile12.ok \
 	profile13.awk \
 	profile13.ok \
+	profile14.awk \
+	profile14.ok \
+	profile15.awk \
+	profile15.ok \
 	prt1eval.awk \
 	prt1eval.ok \
 	prtoeval.awk \
@@ -1424,7 +1428,8 @@ GAWK_EXT_TESTS = \
 	nsbad nsbad_cmd nsforloop nsfuncrecurse nsindirect1 nsindirect2 nsprof1 nsprof2 \
 	patsplit posix printfbad1 printfbad2 printfbad3 printfbad4 printhuge \
 	procinfs profile0 profile1 profile2 profile3 profile4 profile5 profile6 \
-	profile7 profile8 profile9 profile10 profile11 profile12 profile13 pty1 pty2 \
+	profile7 profile8 profile9 profile10 profile11 profile12 profile13 \
+        profile14 profile15 pty1 pty2 \
 	rebuf regnul1 regnul2 regx8bit reginttrad reint reint2 rsgetline rsglstdin \
 	rsstart1 rsstart2 rsstart3 rstest6 \
 	sandbox1 shadow shadowbuiltin sortfor sortfor2 sortu \
@@ -1486,7 +1491,8 @@ NEED_POSIX = escapebrace printf0 posix2008sub paramasfunc1 paramasfunc2 muldimpo
 
 # List of tests that need --pretty-print
 NEED_PRETTY = nsprof1 nsprof2 \
-	profile4 profile5 profile8 profile9 profile10 profile11 profile13
+	profile4 profile5 profile8 profile9 profile10 profile11 profile13 \
+	profile14 profile15
 
 # List of tests that need --re-interval
 NEED_RE_INTERVAL = gsubtst3 reint reint2
