@@ -1,3 +1,8 @@
+2020-08-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New tests, profile14 and profile15.
+	* profile14.awk, profile14.ok, profile15.awk, profile15.ok: New files.
+
 2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* nsprof1.ok, nsprof2.ok: Updated after code changes.
